--- a/404.md
+++ b/404.md
@@ -1,1 +1,4 @@
-tu as fait une erreur de page, nous somme désolé.
+---
+permalink: /404.html
+---
+tu as fait une erreur de page, nous sommes vraiment désolé pour la gène aucasionné...
